Updated method formatList()